# video-rag-platform

./: .gitignore  README.md  package-lock.json
backend/: README.md  pyproject.toml  requirements.txt  text.tst
backend/app/: __init__.py  chat_store.py  config.py  ingestion.py  main.py  youtube_client.py
backend/app/graph/: nodes.py  state.py  workflow.py
backend/supabase/: schema.sql
front-end/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.js
front-end/src/: middleware.ts
front-end/src/app/: globals.css  layout.tsx  page.tsx
front-end/src/app/about/: page.tsx
front-end/src/app/api/chat/: route.ts
front-end/src/app/chat/: page.tsx
front-end/src/app/chatbot/: layout.tsx  page.tsx
front-end/src/components/: FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Loading.tsx  Navbar.tsx  PricingSection.tsx
front-end/src/components/ai-elements/: conversation.tsx
front-end/src/components/chat/: ChatInterface.tsx  ChatSidebar.tsx
front-end/src/components/chatbot/: ai-assistant-panel.tsx  chat-history-sidebar.tsx  chat-message.tsx  chat-session-shell.tsx  video-timeline-panel.tsx
front-end/src/components/landing/: FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  PricingSection.tsx
front-end/src/components/ui/: tabs.tsx
front-end/src/components/video/: VideoTimelinePanel.tsx
front-end/src/context/: VideoContext.tsx
front-end/src/hooks/: use-chat-user.ts  useChatUserId.ts
front-end/src/lib/: chat-api.ts  chat-timeline.ts  mock-data.ts  utils.ts
front-end/src/types/: index.ts
(+12 files in other folders)
