[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "MurtazaAfzali13",email = "murtazaafzali13@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "langchain-core (>=1.4.0,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "langchain-pinecone (>=0.2.13,<0.3.0)",
    "langgraph (>=1.2.1,<2.0.0)",
    "pyreadline3 (>=3.5.6,<4.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "pinecone (>=7.3.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.0,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
